force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <label>Commission</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>