force-app/main/default/objects/Commission__c/fields/Appel_facturation__c.field-meta.xml
<CustomField>
    <fullName>Appel_facturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appel à facturation</label>
    <referenceTo>Appel_facturation__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>