force-app/main/default/objects/Commission__c/fields/Chiffre_affaire__c.field-meta.xml
<CustomField>
    <fullName>Chiffre_affaire__c</fullName>
    <label>Chiffre d&apos;affaire</label>
    <referenceTo>Chiffre_affaire__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions_salarie</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>