force-app/main/default/objects/Commission__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>