force-app/main/default/objects/Commission__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions_salarie</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>