force-app/main/default/objects/Commission__c/fields/Mois_paiement__c.field-meta.xml
<CustomField>
    <fullName>Mois_paiement__c</fullName>
    <label>Mois de paiement</label>
    <required>true</required>
    <type>Date</type>
</CustomField>