force-app/main/default/objects/Commission__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <label>Montant</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>