force-app/main/default/objects/Commission__c/fields/Montant_net__c.field-meta.xml
<CustomField>
    <fullName>Montant_net__c</fullName>
    <formula>Montant__c *  Chiffre_affaire__r.Palier_atteint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>