force-app/main/default/objects/Commission__c/fields/Nom_du_contrat__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_contrat__c</fullName>
    <formula>Contract__r.Name</formula>
    <label>Nom du contrat</label>
    <type>Text</type>
</CustomField>