force-app/main/default/objects/Commission__c/fields/Societe_commercial__c.field-meta.xml
<CustomField>
    <fullName>Societe_commercial__c</fullName>
    <formula>Contract__r.Societe_du_commercial__c</formula>
    <label>Société du commercial</label>
    <type>Text</type>
</CustomField>