force-app/main/default/objects/Commission__c/fields/Type_de_commission__c.field-meta.xml
<CustomField>
    <fullName>Type_de_commission__c</fullName>
    <formula>Appel_facturation__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de commission</label>
    <type>Text</type>
</CustomField>