force-app/main/default/objects/Commission__c/validationRules/VR_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001</fullName>
    <active>true</active>
    <description>Empêche la modification de la commission lorsque l&apos;appel à facturation lié est validé</description>
    <errorConditionFormula>AND(NOT(TEXT(Appel_facturation__r.Statut__c) = &quot;En attente de validation ADV&quot;), Type_de_commission__c =&apos;Commission&apos;)</errorConditionFormula>
    <errorMessage>Cette commission n&apos;est plus modifiable</errorMessage>
</ValidationRule>